# JAMMA

./: .gitignore  Pipfile  README.md  Spacefile  admin_routes.py  app.json  app.py  frebase test commands.py  passchecker.py  pyproject.toml  requirements.txt  run.py  vercel.json
jamma/: __init__.py  routes.py
jamma/models/: models.py
jamma/other_sites/: about.py  blog.py  careers.py  help_center.py  legal.py  seller_centre.py
jamma/sites/login/: routes.py
jamma/sites/signup/: routes.py
jamma/static/: 404.css
jamma/static/css/: base_nav.css  footer.css  login.css  signup.css
jamma/static/signup/js/: step-1.js
jamma/templates/: base.html  help_center.html  index.html  smartwatch.html
jamma/templates/login/: login.html
jamma/templates/partials/: base_nav.html  footer.html
jamma/templates/signup/: signup.html
jamma/templates/signup/partials/: signup-step-indicator.html  step-1.html
jamma/verification/: verification.py
static/: navigation.css
templates/: 404.html  about.html  allproducts.html  earphone.html  index.html  loaderio-8f82c94de57fbc8606728068c3bba183.html  login.html  navigation.html  register.html  smartwatch.html
